# shesa

./: .dockerignore  .gitignore  ARCHITECTURE.md  ARXIV.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  run-web.sh
arxiv-explorer/: Dockerfile  README.md  arxiv-explorer.sh  docker-compose.yml
docs/notes/: RLM-STRATEGY.md
docs/plans/: 2026-02-01-shesha-design.md  2026-02-01-shesha-implementation.md  2026-02-06-enforce-untrusted-content-wrapping.md  2026-02-06-pool-integration.md  2026-02-08-tui-design.md  2026-02-08-tui-implementation.md  2026-02-08-tui-ux-fixes-design.md  2026-02-09-code-echo-and-continue-prompt-design.md  2026-02-09-code-echo-and-continue-prompt.md  2026-02-09-engine-rewrite-design.md  2026-02-09-engine-rewrite-implementation.md  2026-02-09-force-subcalls-design.md  2026-02-09-force-subcalls-implementation.md  2026-02-09-reference-rlm-benchmark-design.md  2026-02-09-reference-rlm-benchmark-implementation.md  2026-02-09-rlm-alignment-design.md  2026-02-10-analysis-shortcut-classifier-design.md  2026-02-10-analysis-shortcut-prompt-hardening-design.md  2026-02-10-model-display-and-cli-design.md  2026-02-10-write-overwrite-protection-design.md  2026-02-10-write-overwrite-protection-implementation.md  2026-02-11-arxiv-explorer-design.md  2026-02-11-arxiv-explorer-implementation.md  2026-02-11-arxiv-tui-command-ux-design.md  2026-02-11-arxiv-tui-design.md  2026-02-11-arxiv-tui-implementation.md  2026-02-11-randomized-boundary-design.md  2026-02-11-randomized-boundary-implementation.md  2026-02-11-tui-command-ux-implementation.md  2026-02-12-citation-report-redesign.md  2026-02-12-citation-verification-upgrade-design.md  2026-02-12-citation-verification-upgrade-implementation.md  2026-02-12-paper-sidebar-design.md  2026-02-12-paper-sidebar-implementation.md  2026-02-12-web-interface-design.md  2026-02-12-web-interface-implementation.md  2026-02-13-inline-citations-design.md  (+1 more)
examples/: arxiv-explorer.sh  arxiv.py  arxiv_explorer.py  barsoom.py  multi_repo.py  repo.py  script_utils.py
oolong/: oolong-research.md  run_oolong_and_pairs.py  run_reference_implementation.py
prompts/: context_metadata.md  iteration_continue.md  iteration_zero.md  subcall.md  system.md
scratch/: flaws.md
src/shesha/: __init__.py  (+4 more)
(+172 files in other folders)
